chore: migrate from JUnit 4 to JUnit 5 and upgrade to Java 17
Signed-off-by: Joel Hanson <17215044+Joel-hanson@users.noreply.github.com>